--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@ html, body {
 
 
 .bg,.button {
-position:absolute;
 width: 50px;
 height: 50px;
 border-radius: 50px;
@@ -19,13 +18,14 @@ border-radius: 50px;
   animation: pulse 1.2s ease infinite;
   background-color: rgba(0,0,0,0.23);
   border: solid white 1px;
+
 }
 
 .button {
- display:flex;
+ /* display:flex; */
  justify-content: center;
  align-items: center;
-position: absolute;
+/* position: absolute; */
 z-index: 99;
 border: none;
 background-size: 18px;
@@ -35,14 +35,12 @@ text-align: center;
 }
 
 .button a {
-  position: absolute;
+
   color: #FFF;
   font-size: 20px;
-  margin-left: 2px;
-  margin-top: 3px;
 }
 
-@keyframes pulse {
+/* @keyframes pulse {
   0% {
     transform: scale(1, 1);
   }
@@ -54,18 +52,46 @@ text-align: center;
 
     opacity: 0;
   }
+} */
+
+
+.blob {
+  background: transparent;
+	border-radius: 50%;
+	margin: 10px;
+	height: 50px;
+	width: 50px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.23);
+	transform: scale(2);
+	animation: pulse 2s infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
 
-.button a {
-
-}
-i {
-  padding: 20px;
+.blob i {
+  font-size: 20px;
 }
 
 
-.svg-bg {
-  background-repeat: no-repeat;
-  height: 500px;
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(199,194,189, 0.5);
+	}
 
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
+.Arrow {
+  color: white;
+  font-size: 20px;
 }
