--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ text-align: center;
 .button a {
 
   color: #FFF;
-  font-size: 20px;
+  font-size: px;
 }
 
 /* @keyframes pulse {
@@ -58,7 +58,6 @@ text-align: center;
 .blob {
   background: transparent;
 	border-radius: 50%;
-	margin: 10px;
 	height: 50px;
 	width: 50px;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.23);
@@ -66,11 +65,25 @@ text-align: center;
 	animation: pulse 2s infinite;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
+  text-align: center; 
 }
 
 .blob i {
   font-size: 20px;
+}
+
+
+.blob {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.blob a {
+  margin-left: 2px;
+  margin-top: 2px;
 }
 
 
@@ -94,4 +107,5 @@ text-align: center;
 .Arrow {
   color: white;
   font-size: 20px;
+  
 }
